correct z-index: 1; instead of z-index: -1;

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -763,7 +763,7 @@ textarea.input100 {
   background-color: #1E2021;
   padding: 20px;
   width: 350px;
-  z-index: -1;
+  z-index: 1;
   position: absolute;
   border-radius: 3px;
   box-shadow: 1px 1px 1px rgba(0, 0, 0, 0.2);
